src/objects/Sub_Change_Management__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Due_Date__c</fullName>
        <formula>General_Task__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Plan Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssignedOwner__c</fullName>
        <formula>Document_Profile__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>Change_Management__c</referenceTo>
        <relationshipLabel>Sub Change Management</relationshipLabel>
        <relationshipName>Sub_Change_Management</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Managenent_Owner_Name__c</fullName>
        <formula>Change_Management__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Managenent Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rev__c</fullName>
        <formula>Document_Profile__r.Current_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Rev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Profile_Name__c</fullName>
        <formula>Document_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Profile_Owner_Name__c</fullName>
        <formula>Document_Profile__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Profile Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Document Number</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>Sub Change Management</relationshipLabel>
        <relationshipName>Sub_Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Specific_Changes__c</fullName>
        <label>Document Specific Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Task_Due_Date__c</fullName>
        <formula>General_Task__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field added to capture General Task information</description>
        <label>General Task</label>
        <referenceTo>General_Task__c</referenceTo>
        <relationshipLabel>Sub Change Management</relationshipLabel>
        <relationshipName>Sub_Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Rev__c</fullName>
        <label>New Rev</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Document_Profile__r.Owner:User.FirstName+&apos; &apos;+Document_Profile__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relations__c</fullName>
        <formula>TEXT(Document_Profile__r.Relation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Document_Profile__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDocCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDocCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <label>Sub Change Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AssignedOwner__c</columns>
        <columns>Document_Profile__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Owner__c</columns>
        <columns>Change_Management__c</columns>
        <columns>NAME</columns>
        <columns>General_Task__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCM-{0000}</displayFormat>
        <label>Sub Change Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Change Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>